[gd_scene load_steps=13 format=3 uid="uid://cwx7kawg3t8af"]

[ext_resource type="Script" path="res://Scripts/menu.gd" id="1_ntlvg"]
[ext_resource type="Texture2D" uid="uid://5setbk42fln5" path="res://Sprites/Placeholders/LAYOUT1.jpg" id="2_0lrhd"]
[ext_resource type="Texture2D" uid="uid://pnvfq1fwbij7" path="res://Sprites/Placeholders/Screenshot 2025-06-28 151325.png" id="3_40ryt"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5fcmx"]
texture = ExtResource("2_0lrhd")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1vtyf"]
texture = ExtResource("3_40ryt")

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_dsaif"]
size = Vector2(200, 50)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_eih7e"]
size = Vector2(200, 50)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_sh3kj"]
size = Vector2(200, 50)

[sub_resource type="Animation" id="Animation_ktq1x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition/ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_krsud"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Transition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_oy7d7"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Transition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rhbxn"]
_data = {
"RESET": SubResource("Animation_ktq1x"),
"fade_in": SubResource("Animation_krsud"),
"fade_out": SubResource("Animation_oy7d7")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ntlvg")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_5fcmx")

[node name="Panel2" type="Panel" parent="."]
layout_mode = 0
offset_left = 614.0
offset_top = 48.0
offset_right = 1089.0
offset_bottom = 340.0
theme_override_styles/panel = SubResource("StyleBoxTexture_1vtyf")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 725.0
offset_top = 367.0
offset_right = 925.0
offset_bottom = 525.0
scale = Vector2(1.32001, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
alignment = 1

[node name="Play" type="TextureButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
texture_normal = SubResource("PlaceholderTexture2D_dsaif")

[node name="Settings" type="TextureButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
texture_normal = SubResource("PlaceholderTexture2D_eih7e")

[node name="Exit" type="TextureButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
texture_normal = SubResource("PlaceholderTexture2D_sh3kj")

[node name="Transition" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rhbxn")
}

[node name="ColorRect" type="ColorRect" parent="Transition"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="animation_finished" from="Transition" to="." method="_on_transition_animation_finished"]
